--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["Victor Berger <victor.berger@thalesgroup.com>"]
 [dependencies]
 wayland-server = "0.8.4"
 nix = "0.7.0"
+slog = { version = "~1.5.2", features = ["max_level_trace", "release_max_level_info"] }
+slog-stdlog = "~1.1.0"
+
+[dev-dependencies]
+slog-term = "~1.5"
