--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: rust
 
+cache: cargo
+
+sudo: false
+
 rust:
   - stable
   - beta
@@ -10,8 +14,10 @@ os:
 
 dist: trusty
 
-before_install:
-  - sudo apt-get install -y libwayland-dev
+addons:
+  apt:
+    packages:
+      - libwayland-dev
 
 branches:
   only:
