--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
 script:
   - |
       travis-cargo build &&
-      travis-cargo --only stable doc
+      travis-cargo --only stable doc -- --no-deps
 
 after_success:
   - travis-cargo --only stable doc-upload
