--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 authors = ["Victor Berger <victor.berger@thalesgroup.com>"]
 
 [dependencies]
-wayland-server = "0.8.4"
+wayland-server = { version = "0.8.4", features = ["dlopen"] }
 nix = "0.7.0"
+glutin = { version = "~0.7.4", optional = true }
+glium = { version = "~0.16.0", optional = true }
 slog = { version = "~1.5.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "~1.1.0"
 clippy = { version = "*", optional = true }
 
 [dev-dependencies]
 slog-term = "~1.5"
+
+[features]
+default = ["glutin"]
