--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ before_script:
 
 script:
   - cargo fmt -- --write-mode=diff
-  - travis-cargo build
+  - travis-cargo --skip nightly build
+  - travis-cargo --only nightly build -- --features "clippy"
   - travis-cargo --only stable doc -- --no-deps
 
 after_success:
