--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ wayland-server = "0.8.4"
 nix = "0.7.0"
 slog = { version = "~1.5.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "~1.1.0"
+clippy = { version = "*", optional = true }
 
 [dev-dependencies]
 slog-term = "~1.5"
