--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Victor Berger <victor.berger@thalesgroup.com>"]
 
 [dependencies]
-wayland-server = { version = "0.8.6", features = ["dlopen"] }
+wayland-server = "0.8.6"
 nix = "0.7.0"
 glutin = { version = "~0.7.4", optional = true }
 glium = { version = "~0.16.0", optional = true }
@@ -16,4 +16,6 @@ clippy = { version = "*", optional = true }
 slog-term = "~1.5"
 
 [features]
-default = ["glutin"]
+default = ["backend_glutin", "renderer_glium"]
+backend_glutin = ["glutin", "wayland-server/dlopen"]
+renderer_glium = ["glium"]
