Turn of Fixme and Todo reporting

--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -4,8 +4,8 @@ fn_args_layout = "Visual"
 fn_arg_intent = "Tabbed"
 reorder_imports = true
 reorder_imported_names = true
-report_todo = "Always"
-report_fixme = "Always"
+report_todo = "Never"
+report_fixme = "Never"
 normalize_comments = true
 use_try_shorthand = true
 max_width = 110
