Add MIT license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "smithay"
 version = "0.1.0"
 authors = ["Victor Berger <victor.berger@thalesgroup.com>"]
+license = "MIT"
 
 [dependencies]
 wayland-server = "0.8.6"
