--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,14 @@ authors = ["Victor Berger <victor.berger@thalesgroup.com>"]
 license = "MIT"
 
 [dependencies]
-wayland-server = "0.8.6"
+wayland-server = "0.9.1"
 nix = "0.7.0"
-glutin = { version = "~0.7.4", optional = true }
-glium = { version = "~0.16.0", optional = true }
+xkbcommon = "0.2.1"
+tempfile = "2.1.5"
 slog = { version = "~1.5.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "~1.1.0"
+glutin = { version = "~0.7.4", optional = true }
+glium = { version = "~0.16.0", optional = true }
 clippy = { version = "*", optional = true }
 
 [dev-dependencies]
