--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ wayland-server = "0.9.1"
 nix = "0.7.0"
 xkbcommon = "0.2.1"
 tempfile = "2.1.5"
-slog = { version = "2.0.0", features = ["max_level_trace", "release_max_level_info"] }
+slog = { version = "2.0.0" }
 slog-stdlog = "2.0.0-0.2"
 glutin = { version = "~0.7.4", optional = true }
 glium = { version = "~0.16.0", optional = true }
