Added libudev to travis for buildings libinput

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ addons:
   apt:
     packages:
       - libwayland-dev
+      - libudev-dev
 
 branches:
   only:
@@ -59,4 +60,3 @@ notifications:
         on_success: change
         on_failure: always
         on_start: never
-
