--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ slog = { version = "2.0.0" }
 slog-stdlog = "2.0.0-0.2"
 glutin = { version = "~0.7.4", optional = true }
 glium = { version = "~0.16.0", optional = true }
-input = { version = "0.1", optional = true }
+input = { version = "~0.1.1", optional = true }
 clippy = { version = "*", optional = true }
 
 [dev-dependencies]
