--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ slog = { version = "2.0.0" }
 slog-stdlog = "2.0.0-0.2"
 libloading = "0.4.0"
 wayland-client = { version = "~0.8.6", optional = true }
-winit = { version = "~0.6.4", optional = true }
+winit = { git = "https://github.com/tomaka/winit.git", optional = true }
 glium = { version = "~0.16.0", optional = true }
 input = { version = "~0.1.1", optional = true }
 clippy = { version = "*", optional = true }
