--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ slog-stdlog = "2.0.0-0.2"
 libloading = "0.4.0"
 wayland-client = { version = "~0.8.6", optional = true }
 winit = { git = "https://github.com/tomaka/winit.git", optional = true }
-glium = { version = "~0.16.0", optional = true }
+glium = { version = "~0.16.0", optional = true, default-features="false" }
 input = { version = "~0.2.0", optional = true }
 clippy = { version = "*", optional = true }
 rental = "0.4.11"
