--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ glium = { version = "0.16.0", optional = true, default-features = false }
 input = { version = "0.2.0", optional = true }
 clippy = { version = "*", optional = true }
 rental = "0.4.11"
+wayland-protocols = { version = "0.9.9", features = ["unstable_protocols", "server"] }
 
 [build-dependencies]
 gl_generator = "0.5"
