travis: use rustfmt-nightly

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,15 @@ branches:
 
 before_script:
   - export PATH=$HOME/.local/bin:$HOME/.cargo/bin:$PATH
-  - which rustfmt || cargo install rustfmt
+  - pip install 'travis-cargo<0.2' --user
+  - which rustfmt || travis-cargo --only nightly install rustfmt-nightly
   - which cargo-install-update || cargo install cargo-update
   - cargo install-update -a
-  - pip install 'travis-cargo<0.2' --user
   - mkdir $(pwd)/socket
   - export XDG_RUNTIME_DIR="$(pwd)/socket"
 
 script:
-  - cargo fmt -- --write-mode=diff
+  - travis-cargo --only nightly fmt -- --write-mode=diff
   - travis-cargo --skip nightly build
   - travis-cargo --only nightly build -- --features "clippy"
   - travis-cargo --only stable doc -- --no-deps
