examples: randomise window location in simple.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ gl_generator = "0.5"
 [dev-dependencies]
 slog-term = "2.0"
 slog-async = "2.0"
+rand = "0.3"
 
 [features]
 default = ["backend_winit", "backend_libinput", "renderer_glium"]
