--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,15 @@ slog = { version = "2.0.0" }
 slog-stdlog = "2.0.0-0.2"
 libloading = "0.4.0"
 wayland-client = { version = "0.9.9", optional = true }
-winit = { version = "0.7.0", optional = true }
-glium = { version = "0.16.0", optional = true, default-features = false }
+winit = { version = "0.7.5", optional = true }
+drm = { version = "0.2.1", optional = true }
+gbm = { version = "0.2.1", optional = true }
+glium = { version = "0.17.1", optional = true, default-features = false }
 input = { version = "0.2.0", optional = true }
 clippy = { version = "*", optional = true }
 rental = "0.4.11"
 wayland-protocols = { version = "0.10.1", features = ["unstable_protocols", "server"] }
+image = "0.15.0"
 
 [build-dependencies]
 gl_generator = "0.5"
@@ -29,7 +32,14 @@ slog-async = "2.0"
 rand = "0.3"
 
 [features]
-default = ["backend_winit", "backend_libinput", "renderer_glium"]
+default = ["backend_winit", "backend_drm", "backend_libinput", "renderer_glium"]
 backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen"]
-renderer_glium = ["glium"]
+backend_drm = ["drm", "gbm"]
 backend_libinput = ["input"]
+renderer_glium = ["glium"]
+
+[replace]
+"wayland-server:0.9.9" = { git = "https://github.com/Drakulix/wayland-rs", branch = "raw_handler_access"}
+"wayland-protocols:0.9.9" = { git = "https://github.com/Drakulix/wayland-rs", branch = "raw_handler_access"}
+"wayland-client:0.9.9" = { git = "https://github.com/Drakulix/wayland-rs", branch = "raw_handler_access"}
+"drm:0.2.1" = { git = "https://github.com/Drakulix/drm-rs", branch = "fix/userdata" }
