drm: Check for valid encoder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,4 @@ renderer_glium = ["glium"]
 "wayland-server:0.9.9" = { git = "https://github.com/Drakulix/wayland-rs", branch = "raw_handler_access"}
 "wayland-protocols:0.9.9" = { git = "https://github.com/Drakulix/wayland-rs", branch = "raw_handler_access"}
 "wayland-client:0.9.9" = { git = "https://github.com/Drakulix/wayland-rs", branch = "raw_handler_access"}
-"drm:0.2.1" = { git = "https://github.com/Drakulix/drm-rs", branch = "fix/userdata" }
+"drm:0.2.1" = { git = "https://github.com/Drakulix/drm-rs", branch = "future" }
