--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ clippy = { version = "*", optional = true }
 rental = "0.4.11"
 wayland-protocols = { version = "0.10.1", features = ["unstable_protocols", "server"] }
 image = "0.15.0"
+error-chain = "0.11.0"
 
 [build-dependencies]
 gl_generator = "0.5"
