--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 
 cache: cargo
 
-sudo: false
+sudo: required
 
 rust:
   - stable
@@ -21,8 +21,16 @@ dist: trusty
 addons:
   apt:
     packages:
-      - libwayland-dev
+      - libssl-dev
       - libudev-dev
+      - libgbm-dev
+      - libxkbcommon-dev
+      - libegl1-mesa-dev
+
+before_install:
+  - sudo add-apt-repository -y ppa:wayland.admin/daily-builds
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libwayland-dev libinput-dev
 
 branches:
   only:
@@ -38,13 +46,13 @@ before_script:
   - export XDG_RUNTIME_DIR="$(pwd)/socket"
 
 script:
-  - travis-cargo --only nightly fmt -- -- --write-mode=diff
-  - travis-cargo --skip nightly build
-  - travis-cargo --only nightly build -- --features "clippy"
-  - travis-cargo --only stable doc -- --no-deps
+  - travis-cargo -q --only nightly fmt -- -- --write-mode=diff
+  - travis-cargo -q --skip nightly test
+  - travis-cargo -q --only nightly test -- --features "clippy"
+  - travis-cargo -q --only stable doc -- --no-deps
 
 after_success:
-  - travis-cargo --only stable doc-upload
+  - travis-cargo -q --only stable doc-upload
 
 env:
   global:
