--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ slog-stdlog = "2.0.0-0.2"
 libloading = "0.4.0"
 wayland-client = { version = "0.9.9", optional = true }
 winit = { version = "0.8.2", optional = true }
-drm = { version = "=0.2.1", optional = true }
-gbm = { version = "=0.2.1", optional = true }
+drm = { version = "^0.3.0", optional = true }
+gbm = { version = "^0.2.2", optional = true }
 glium = { version = "0.17.1", optional = true, default-features = false }
 input = { version = "0.2.0", optional = true }
 rental = "0.4.11"
@@ -37,6 +37,3 @@ backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen"]
 backend_drm = ["drm", "gbm"]
 backend_libinput = ["input"]
 renderer_glium = ["glium"]
-
-[replace]
-"drm:0.2.1" = { git = "https://github.com/Drakulix/drm-rs", branch = "future" }
