--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,15 @@ libloading = "0.4.0"
 wayland-client = { version = "0.9.9", optional = true }
 winit = { version = "0.8.2", optional = true }
 drm = { version = "^0.3.0", optional = true }
-gbm = { version = "^0.2.2", optional = true }
+gbm = { version = "^0.3.0", optional = true }
 glium = { version = "0.17.1", optional = true, default-features = false }
-input = { version = "0.2.0", optional = true }
+input = { version = "0.3.0", optional = true }
+libudev = { git = "https://github.com/Drakulix/libudev-rs.git", branch = "feature/raw_ffi_access", optional = true }
 rental = "0.4.11"
 wayland-protocols = { version = "0.12.0", features = ["unstable_protocols", "server"] }
-image = "0.16.0"
+image = "0.17.0"
 error-chain = "0.11.0"
+dbus = { version = "0.5.4", optional = true }
 
 [build-dependencies]
 gl_generator = "0.5"
@@ -32,10 +34,15 @@ gl_generator = "0.5"
 slog-term = "2.0"
 slog-async = "2.0"
 rand = "0.3"
+ctrlc = { version = "3.0", features = ["termination"] }
 
 [features]
-default = ["backend_winit", "backend_drm", "backend_libinput", "renderer_glium"]
+default = ["backend_winit", "backend_drm", "backend_libinput", "backend_udev", "renderer_glium"]
 backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen"]
 backend_drm = ["drm", "gbm"]
 backend_libinput = ["input"]
+backend_session = []
+backend_session_udev = ["libudev", "backend_session"]
+backend_session_logind = ["backend_session", "dbus"]
+backend_udev = ["libudev", "backend_drm", "backend_session_udev"]
 renderer_glium = ["glium"]
