--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 authors = ["Victor Berger <victor.berger@m4x.org>", "Drakulix (Victor Brekenfeld)"]
 license = "MIT"
 description = "Smithay is a library for writing wayland compositors."
+repository = "https://github.com/Smithay/smithay"
 
 [dependencies]
 wayland-server = "0.10.2"
-nix = "0.7.0"
+nix = "0.9.0"
 xkbcommon = "0.2.1"
 tempfile = "2.1.5"
 slog = { version = "2.0.0" }
@@ -21,7 +22,7 @@ glium = { version = "0.17.1", optional = true, default-features = false }
 input = { version = "0.2.0", optional = true }
 rental = "0.4.11"
 wayland-protocols = { version = "0.10.2", features = ["unstable_protocols", "server"] }
-image = "0.15.0"
+image = "0.16.0"
 error-chain = "0.11.0"
 
 [build-dependencies]
