--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
 
 before_install:
   - sudo add-apt-repository -y ppa:wayland.admin/daily-builds
-  - sudo apt-get update -qq
+  - sudo apt-get update -qq || echo "Ignoring failed apt-get update..."
   - sudo apt-get install -y libwayland-dev libinput-dev
 
 branches:
