--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ wayland-protocols = { version = "0.12.0", features = ["unstable_protocols", "ser
 image = "0.17.0"
 error-chain = "0.11.0"
 dbus = { version = "0.5.4", optional = true }
+systemd = { version = "0.1.0", optional = true }
 
 [build-dependencies]
 gl_generator = "0.5"
@@ -43,6 +44,6 @@ backend_drm = ["drm", "gbm"]
 backend_libinput = ["input"]
 backend_session = []
 backend_session_udev = ["libudev", "backend_session"]
-backend_session_logind = ["backend_session", "dbus"]
+backend_session_logind = ["backend_session", "dbus", "systemd"]
 backend_udev = ["libudev", "backend_drm", "backend_session_udev"]
 renderer_glium = ["glium"]
