--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ libloading = "0.4.0"
 wayland-client = { version = "0.9.9", optional = true }
 winit = { version = "0.8.2", optional = true }
 drm = { version = "^0.3.0", optional = true }
-gbm = { version = "^0.3.0", optional = true }
+gbm = { version = "^0.3.0", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.17.1", optional = true, default-features = false }
 input = { version = "0.4.0", git = "https://github.com/Smithay/input.rs.git", branch = "feature/udev", optional = true }
 libudev = { git = "https://github.com/Drakulix/libudev-rs.git", branch = "feature/raw_ffi_access", optional = true }
