--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ winit = { version = "0.8.2", optional = true }
 drm = { version = "^0.3.0", optional = true }
 gbm = { version = "^0.3.0", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.17.1", optional = true, default-features = false }
-input = { version = "0.4.0", git = "https://github.com/Smithay/input.rs.git", branch = "feature/udev", optional = true }
-libudev = { git = "https://github.com/Drakulix/libudev-rs.git", branch = "feature/raw_ffi_access", optional = true }
+input = { version = "0.4.0", optional = true }
+udev = { version = "0.2.0", optional = true }
 rental = "0.4.11"
 wayland-protocols = { version = "0.12.0", features = ["unstable_protocols", "server"] }
 image = "0.17.0"
@@ -43,9 +43,9 @@ backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen"]
 backend_drm = ["drm", "gbm"]
 backend_libinput = ["input"]
 backend_session = []
-backend_session_udev = ["libudev", "backend_session"]
+backend_session_udev = ["udev", "backend_session"]
 backend_session_logind = ["backend_session", "dbus", "systemd"]
-backend_udev = ["libudev", "backend_drm", "backend_session_udev"]
+backend_udev = ["udev", "backend_drm", "backend_session_udev"]
 renderer_glium = ["glium"]
 
 [patch.crates-io]
