--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rental = "0.4.11"
 wayland-protocols = { version = "0.12.0", features = ["unstable_protocols", "server"] }
 image = "0.17.0"
 error-chain = "0.11.0"
+lazy_static = "1.0.0"
 
 [build-dependencies]
 gl_generator = "0.5"
