--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ libloading = "0.4.0"
 wayland-client = { version = "0.12.5", optional = true }
 winit = { version = "0.10.0", optional = true }
 drm = { version = "^0.3.1", optional = true }
-gbm = { version = "^0.4.0", git = "https://github.com/Smithay/gbm.rs.git", branch = "feature/ref_counted_api", optional = true, default-features = false, features = ["drm-support"] }
+gbm = { version = "^0.4.0", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.19.0", optional = true, default-features = false }
 input = { version = "0.4.0", optional = true }
 udev = { version = "0.2.0", optional = true }
