Use new rustfmt-preview

--- a/vagga.yaml
+++ b/vagga.yaml
@@ -43,6 +43,8 @@ containers:
             - !Container base
             - !Env HOME: /work/.vagga/nightly-home
             - !Sh curl https://sh.rustup.rs -sSf | sh -s -- -y --default-host x86_64-unknown-linux-gnu --default-toolchain nightly --no-modify-path
+            - !Env PATH: /bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:/work/.vagga/nightly-home/.cargo/bin:/work/.vagga/nightly-home/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/
+            - !Sh rustup component add rustfmt-preview
 
 commands:
     update-stable: !Command
