--- a/vagga.yaml
+++ b/vagga.yaml
@@ -6,7 +6,7 @@ containers:
         setup:
             - !UbuntuRelease { codename: artful }
             - !UbuntuUniverse
-            - !Install [build-essential, wget, curl, pkg-config, file, openssl, sudo, ca-certificates, libssl-dev, cmake, libudev-dev, libgbm-dev, libxkbcommon-dev, libegl1-mesa-dev, libwayland-dev, libinput-dev]
+            - !Install [build-essential, wget, curl, pkg-config, file, openssl, sudo, ca-certificates, libssl-dev, cmake, libudev-dev, libgbm-dev, libxkbcommon-dev, libegl1-mesa-dev, libwayland-dev, libinput-dev, libsystemd-dev, libdbus-1-dev]
 
     stable:
         auto-clean: true
