--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ glium = { version = "0.19.0", optional = true, default-features = false }
 input = { version = "0.4.0", optional = true }
 udev = { version = "0.2.0", optional = true }
 dbus = { version = "0.6.1", optional = true }
-systemd = { git = "https://github.com/Drakulix/rust-systemd", branch = "feature/login_functions", optional = true }
+systemd = { version = "^0.2.0", optional = true }
 wayland-protocols = { version = "0.12.5", features = ["unstable_protocols", "server"] }
 image = "0.17.0"
 error-chain = "0.11.0"
