--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,12 @@ repository = "https://github.com/Smithay/smithay"
 members = [ "anvil" ]
 
 [dependencies]
-wayland-server = "0.20.5"
-wayland-sys = "0.20.5"
-nix = "0.10.0"
+wayland-server = "0.21.1"
+wayland-sys = "0.21.1"
+nix = "0.11"
 xkbcommon = "0.2.1"
 tempfile = "2.1.5"
-slog = { version = "2.1.1" }
+slog = "2.1.1"
 slog-stdlog = "3.0.2"
 libloading = "0.4.0"
 wayland-client = { version = "0.20.5", optional = true }
@@ -27,7 +27,7 @@ input = { version = "0.4.0", optional = true }
 udev = { version = "0.2.0", optional = true }
 dbus = { version = "0.6.1", optional = true }
 systemd = { version = "^0.2.0", optional = true }
-wayland-protocols = { version = "0.20.5", features = ["unstable_protocols", "server"] }
+wayland-protocols = { version = "0.21.1", features = ["unstable_protocols", "native_server"] }
 image = "0.17.0"
 error-chain = "0.11.0"
 lazy_static = "1.0.0"
