--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ tempfile = "2.1.5"
 slog = "2.1.1"
 slog-stdlog = "3.0.2"
 libloading = "0.4.0"
-wayland-client = { version = "0.20.5", optional = true }
+wayland-client = { version = "0.21.1", features = ["egl"], optional = true }
 winit = { version = "0.17.0", optional = true }
 drm = { version = "^0.3.1", optional = true }
 gbm = { version = "^0.4.0", optional = true, default-features = false, features = ["drm-support"] }
