--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ slog-stdlog = "3.0.2"
 libloading = "0.4.0"
 wayland-client = { version = "0.21.1", features = ["egl"], optional = true }
 winit = { version = "0.18.0", optional = true }
-drm = { version = "^0.3.1", optional = true }
+drm = { version = "^0.3.4", optional = true }
 gbm = { version = "^0.4.0", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.19.0", optional = true, default-features = false }
 input = { version = "0.4.0", optional = true }
@@ -37,9 +37,12 @@ lazy_static = "1.0.0"
 gl_generator = { version = "0.9", optional = true }
 
 [features]
-default = ["backend_winit", "backend_drm", "backend_libinput", "backend_udev", "renderer_glium", "xwayland"]
+default = ["backend_winit", "backend_drm_legacy", "backend_drm_gbm", "backend_drm_egl", "backend_libinput", "backend_udev", "renderer_glium", "xwayland"]
 backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen", "backend_egl"]
-backend_drm = ["drm", "backend_egl"]
+backend_drm = ["drm"]
+backend_drm_legacy = ["backend_drm"]
+backend_drm_gbm = ["backend_drm", "gbm"]
+backend_drm_egl = ["backend_drm", "backend_egl"]
 backend_egl = ["gl_generator"]
 backend_libinput = ["input"]
 backend_session = []
