anvil: fix for drm backend changes

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -23,8 +23,7 @@ features = [ "renderer_glium" ]
 gl_generator = "0.9"
 
 [features]
-default = [ "winit", "tty_launch", "udev" ]
+default = [ "winit", "udev" ]
 winit = [ "smithay/backend_winit" ]
-tty_launch = [ "smithay/backend_libinput", "smithay/backend_drm" ]
-udev = [ "tty_launch", "smithay/backend_udev" ]
+udev = [ "smithay/backend_libinput", "smithay/backend_drm", "smithay/backend_udev", "smithay/backend_session" ]
 logind = [ "smithay/backend_session_logind" ]
