Replace documentation links with intra rustdoc links

--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ deploy:
   local_dir: "./target/doc"
   on:
     branch: master
-    rust: stable
+    rust: nightly
     condition: "$FEATURES = all"
 
 notifications:
