Do not wait for nightly builds to succeed

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ env:
     - FEATURES="anvil" ANVIL_FEATURES="all"
 
 matrix:
+  fast_finish: true
   include:
       # special features for lint & fmt
     - rust: stable
