--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -18,7 +18,7 @@ xkbcommon = "0.2.1"
 [dependencies.smithay]
 path = ".."
 default-features = false
-features = [ "renderer_glium", "backend_egl" ]
+features = [ "renderer_glium", "backend_egl", "wayland_frontend" ]
 
 [build-dependencies]
 gl_generator = "0.9"
