Update smithay to wayland-server 0.23

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ edition = "2018"
 members = [ "anvil" ]
 
 [dependencies]
-wayland-server = { version = "0.21.6", optional = true }
-wayland-commons = { version = "0.21.1", optional = true }
-wayland-sys = { version = "0.21.6", optional = true }
+wayland-server = { version = "0.23", optional = true }
+wayland-commons = { version = "0.23", optional = true }
+wayland-sys = { version = "0.23", optional = true }
 calloop = "0.4.2"
 nix = "0.11"
 xkbcommon = "0.2.1"
@@ -21,7 +21,7 @@ tempfile = "2.1.5"
 slog = "2.1.1"
 slog-stdlog = "3.0.2"
 libloading = "0.4.0"
-wayland-client = { version = "0.21.1", features = ["egl"], optional = true }
+wayland-client = { version = "0.23", features = ["egl"], optional = true }
 winit = { version = "0.18.0", optional = true }
 drm = { version = "^0.3.4", optional = true }
 gbm = { version = "^0.5.0", optional = true, default-features = false, features = ["drm-support"] }
@@ -30,7 +30,7 @@ input = { version = "0.4.1", optional = true }
 udev = { version = "0.2.0", optional = true }
 dbus = { version = "0.6.1", optional = true }
 systemd = { version = "^0.2.0", optional = true }
-wayland-protocols = { version = "0.21.3", features = ["unstable_protocols", "server"], optional = true }
+wayland-protocols = { version = "0.23", features = ["unstable_protocols", "server"], optional = true }
 image = { version = "0.17.0", optional = true }
 error-chain = "0.11.0"
 lazy_static = "1.0.0"
@@ -55,7 +55,7 @@ backend_udev = ["udev"]
 backend_session_logind = ["dbus", "systemd", "backend_session"]
 renderer_gl = ["gl_generator"]
 renderer_glium = ["renderer_gl", "glium"]
-native_lib = ["wayland_frontend", "wayland-sys", "wayland-server/native_lib", "wayland-protocols/native_server"]
+native_lib = ["wayland_frontend", "wayland-sys", "wayland-server/native_lib"]
 wayland_frontend = ["wayland-server", "wayland-commons", "wayland-protocols"]
 xwayland = ["wayland_frontend"]
 
