wayland.dmabuf: API improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ wayland-server = { version = "0.23.2", optional = true }
 wayland-commons = { version = "0.23.3", optional = true }
 wayland-sys = { version = "0.23", optional = true }
 calloop = "0.4.2"
+bitflags = "1"
 nix = "0.13"
 xkbcommon = "0.4.0"
 tempfile = "3.0"
