--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -14,6 +14,7 @@ rand = "0.6"
 glium = { version = "0.23.0", default-features = false }
 wayland-server = "0.23"
 xkbcommon = "0.4.0"
+bitflags = "1.2.1"
 
 [dependencies.smithay]
 path = ".."
