--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -25,7 +25,7 @@ features = [ "renderer_glium", "backend_egl", "wayland_frontend" ]
 gl_generator = "0.10"
 
 [features]
-default = [ "winit", "egl", "udev" ]
+default = [ "winit", "egl", "udev", "logind" ]
 egl = [ "smithay/use_system_lib" ]
 winit = [ "smithay/backend_winit" ]
 udev = [ "smithay/backend_libinput", "smithay/backend_drm_legacy", "smithay/backend_drm_gbm", "smithay/backend_drm_egl", "smithay/backend_udev", "smithay/backend_session" ]
