--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -31,3 +31,5 @@ egl = [ "smithay/use_system_lib" ]
 winit = [ "smithay/backend_winit" ]
 udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm_atomic", "smithay/backend_drm_legacy", "smithay/backend_drm_gbm", "smithay/backend_drm_eglstream", "smithay/backend_drm_egl", "smithay/backend_session", "input" ]
 logind = [ "smithay/backend_session_logind" ]
+elogind = ["logind", "smithay/backend_session_elogind" ]
+test_all_features = ["default"]
