--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ glium = { version = "0.27.0", optional = true, default-features = false }
 image = { version = "0.23.0", optional = true }
 input = { version = "0.5", default-features = false, optional = true }
 lazy_static = "1"
+libc = "0.2.70"
 libloading = "0.6.0"
 nix = "0.17"
 slog = "2"
 slog-stdlog = "4"
-systemd = { version = "0.4.0", optional = true }
 tempfile = "3.0"
 thiserror = "1"
 udev = { version = "0.4", optional = true }
@@ -43,6 +43,7 @@ slog-term = "2.3"
 
 [build-dependencies]
 gl_generator = { version = "0.14", optional = true }
+pkg-config = { version = "0.3.17", optional = true }
 
 [features]
 default = ["backend_winit", "backend_drm_legacy", "backend_drm_atomic", "backend_drm_gbm", "backend_drm_eglstream", "backend_drm_egl", "backend_libinput", "backend_udev", "backend_session_logind", "renderer_glium", "xwayland", "wayland_frontend"]
@@ -57,12 +58,14 @@ backend_egl = ["gl_generator"]
 backend_libinput = ["input"]
 backend_session = []
 backend_udev = ["udev"]
-backend_session_logind = ["dbus", "systemd", "backend_session"]
+backend_session_logind = ["dbus", "backend_session", "pkg-config"]
+backend_session_elogind = ["backend_session_logind"]
 renderer_gl = ["gl_generator"]
 renderer_glium = ["renderer_gl", "glium"]
 use_system_lib = ["wayland_frontend", "wayland-sys", "wayland-server/use_system_lib"]
 wayland_frontend = ["wayland-server", "wayland-commons", "wayland-protocols"]
 xwayland = ["wayland_frontend"]
+test_all_features = ["default"]
 
 [[example]]
 name = "raw_legacy_drm"
