Become the X11 window manager after Xwayland startup
This commits adds the necessary magic incantations to become the X11 WM
after Xwayland starts.

This uses the pure-Rust implementation from x11rb, but any other X11
crate could be used as well.

Signed-off-by: Uli Schlachter <psychon@znc.in>

--- a/anvil/Cargo.toml
+++ b/anvil/Cargo.toml
@@ -21,6 +21,12 @@ path = ".."
 default-features = false
 features = [ "renderer_glium", "backend_egl", "wayland_frontend" ]
 
+[dependencies.x11rb]
+optional = true
+version = "0.7"
+default-features = false
+features = [ "composite" ]
+
 [build-dependencies]
 gl_generator = "0.14"
 
@@ -31,5 +37,5 @@ winit = [ "smithay/backend_winit" ]
 udev = [ "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_drm_atomic", "smithay/backend_drm_legacy", "smithay/backend_drm_gbm", "smithay/backend_drm_eglstream", "smithay/backend_drm_egl", "smithay/backend_session", "input" ]
 logind = [ "smithay/backend_session_logind" ]
 elogind = ["logind", "smithay/backend_session_elogind" ]
-xwayland = [ "smithay/xwayland" ]
+xwayland = [ "smithay/xwayland", "x11rb" ]
 test_all_features = ["default"]
